Revision history for {{$dist->name}}

{{$NEXT}}

0.003     2017-09-11 04:32:20+08:00 Asia/Kuala_Lumpur
    New features:

    * Support Ryu::Source as an alternative for channel events

    Bugs fixed:

    * Fixed inactivity timer handling
    * Apply a default version when running code directly from the repo
    * Updated dist.ini to try improving the version handling

0.002     2016-12-25 19:49:46+08:00 Asia/Kuala_Lumpur
    New features:
    * Support for private channels:
    https://pusher.com/docs/client_api_guide/client_private_channels

0.001     2015-02-15 20:26:30+00:00 Europe/London
    Initial CPAN release