@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    Bugs fixed:
+
+    - ping/pong handling was failing with latest version of pusher.com
 
 0.003     2017-09-11 04:32:20+08:00 Asia/Kuala_Lumpur
     New features:
